add vscode config

--- a/hkube/templates/configmap.yaml
+++ b/hkube/templates/configmap.yaml
@@ -136,6 +136,11 @@ data:
                         "image": "{{ .Values.tensorboard.image.repository }}"
                   },
                   {
+                        "project": "vscode-workspace",
+                        "tag": "{{ .Values.vscode_workspace.image.tag }}",
+                        "image": "{{ .Values.vscode_workspace.image.repository }}"
+                  },                  
+                  {
                         "project": "storage-migration",
                         "tag": "{{ .Values.storage_migration.image.tag }}",
                         "image": "{{ .Values.storage_migration.image.repository }}"
