--- a/hkube/templates/algorithm-operator-role.yaml
+++ b/hkube/templates/algorithm-operator-role.yaml
@@ -45,6 +45,13 @@ rules:
   resources:
   - services
   verbs: [create, delete, deletecollection, get, list, patch, update, watch]
+{{- if or .Values.jupyterhub.enable .Values.vscode_workspace.enabled }}
+- apiGroups:
+  - ""
+  resources:
+  - persistentvolumeclaims
+  verbs: [create, delete, get, list]
+{{- end }}
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
