--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -474,7 +474,7 @@ monitor_server: # +doc-gen:ignore
     max_display_batch_size: 10
   image:
     repository: hkube/monitor-server
-    tag: v2.2.2
+    tag: v2.2.3-a
   ingress:
     enabled: true
     path: /hkube/monitor-server
