--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -555,7 +555,7 @@ simulator: # +doc-gen:ignore
     is_secure: ''
   image:
     repository: hkube/simulator
-    tag: v2.2.1
+    tag: jupyter
   ingress:
     enabled: true
     path: /hkube/dashboard
