--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,6 +46,10 @@ jobs:
           git config --local user.name "GitHub Action"
       - name: envs
         run: |
+            if [[ $BRANCH = "main" ]]; then
+              echo changing $BRANCH to master
+              export BRANCH="master"
+            fi
             echo BRANCH=${BRANCH:-master} >> $GITHUB_ENV
             echo FROZEN_VERSION=${FROZEN_VERSION:-false} >> $GITHUB_ENV
             echo TAG=$TAG >> $GITHUB_ENV
