--- a/hkube/templates/configmap.yaml
+++ b/hkube/templates/configmap.yaml
@@ -13,9 +13,9 @@ data:
               "ingressUseRegex": {{ .Values.global.ingress.use_regex }},
               "ingressClass": {{ .Values.global.ingress.class | quote }},
               "devModeEnabled": {{ .Values.sync_server.enabled }},
-              "fluentbitSidecarEnabled": {{ .Values.global.sidecars.fluent_bit.enable }}
-              "datasourcesServiceEnabled": {{ .Values.datasources_service.enabled }}
-              "optunaDashboardEnabled": {{ .Values.optuna_dashboard.enabled }}
+              "fluentbitSidecarEnabled": {{ .Values.global.sidecars.fluent_bit.enable }},
+              "datasourcesServiceEnabled": {{ .Values.datasources_service.enabled }},
+              "optunaDashboardEnabled": {{ .Values.optuna_dashboard.enabled }},
         }
   versions.json: |
         {
