add flag to disable metrics

--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -194,6 +194,7 @@ gitea:
       enabled: false
 
 metrics:
+  enabled: true
   serviceMonitorSelector:
     release: metric
   grafanaDashboardLabel:
