--- a/hkube/templates/hkube-metrics.yaml
+++ b/hkube/templates/hkube-metrics.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.metrics.enabled }}
 {{- if .Capabilities.APIVersions.Has "monitoring.coreos.com/v1" }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -44,4 +45,5 @@ spec:
       app: etcd
       metrics: 'true'
 
+{{- end }}
 {{- end }}
