--- a/hkube/templates/algorithm-operator-role.yaml
+++ b/hkube/templates/algorithm-operator-role.yaml
@@ -34,8 +34,7 @@ rules:
 - apiGroups: ["extensions"]
   resources: ["ingresses"]
   verbs: [create, delete, deletecollection, get, list, patch, update, watch]
-{{- end }}
-{{- if or (.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress") (.Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress") }}
+{{- else }}
 - apiGroups: ["networking.k8s.io"]
   resources: ["ingresses"]
   verbs: [create, delete, deletecollection, get, list, patch, update, watch]
