--- a/hkube/templates/configmaps/algorithm-operator-cm.yaml
+++ b/hkube/templates/configmaps/algorithm-operator-cm.yaml
@@ -15,6 +15,8 @@ data:
   BUILD_MODE: {{ index .Values "algorithm_operator" "build_mode" | quote }}
   ALGORITHM_QUEUE_INTERVAL: {{ .Values.algorithm_operator.env.algorithm_queue_interval | quote }}
   ALGORITHM_QUEUE_CONCURRENCY_LIMIT: {{ .Values.algorithm_operator.env.algorithm_queue_concurrency_limit | quote }}
+  ALGORITHM_QUEUE_MEMORY: {{ .Values.algorithm_operator.env.algorithm_queue_memory | quote }}
+  ALGORITHM_QUEUE_CPU: {{ .Values.algorithm_operator.env.algorithm_queue_cpu | quote }}
   PIPELINE_DRIVERS_AMOUNT: {{ .Values.algorithm_operator.env.pipeline_drivers_amount | quote}}
   PIPELINE_DRIVERS_CONCURRENCY_LIMIT: {{ .Values.algorithm_operator.env.pipeline_drivers_concurrency_limit | quote}}
   BOARDS_TIMEOUT: {{ .Values.algorithm_operator.env.boards_timeout | quote }}
