pipeline driver queue ingress

--- a/hkube/templates/pipeline-driver-queue-service.yaml
+++ b/hkube/templates/pipeline-driver-queue-service.yaml
@@ -17,3 +17,7 @@ spec:
     - name: metrics
       port: {{ index .Values "pipeline_driver_queue" "env" "metric_port" }}
       targetPort: {{ index .Values "pipeline_driver_queue" "env" "metric_port" }}
+    - port: {{ .Values.pipeline_driver_queue.env.rest_port }}
+      targetPort: {{ .Values.pipeline_driver_queue.env.rest_port }}
+      protocol: TCP
+      name: rest      
