--- a/hkube/templates/api-gateway-ingress.yaml
+++ b/hkube/templates/api-gateway-ingress.yaml
@@ -3,7 +3,7 @@
 {{- $fullName := "api-gateway" -}}
 {{- $servicePort := .Values.api_server.env.port | int -}}
 {{- $servicePortGc := .Values.gc_service.env.rest_port | int -}}
-{{- $servicePipelineDriverQueuePort := .Values.pipeline_driver.env.rest_port | int -}}
+{{- $servicePipelineDriverQueuePort := .Values.pipeline_driver_queue.env.rest_port | int -}}
 {{- $servicePortDatasources := .Values.datasources_service.env.port | int -}}
 apiVersion:  {{ template "ingress.apiVersion" . }}
 kind: Ingress
