--- a/hkube/templates/pipeline-driver-queue-deployment.yaml
+++ b/hkube/templates/pipeline-driver-queue-deployment.yaml
@@ -56,6 +56,9 @@ spec:
             - name: http
               containerPort: {{ index .Values "pipeline_driver_queue" "env" "metric_port" }}
               protocol: TCP
+            - name: rest
+              containerPort: {{ index .Values "pipeline_driver_queue" "env" "rest_port" }}
+              protocol: TCP              
           envFrom:
             - configMapRef:
                 name: pipeline-driver-queue-configmap
