--- a/hkube/templates/etcd-defrag.yaml
+++ b/hkube/templates/etcd-defrag.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.etcd_defrag.enable }}
-apiVersion: batch/v1beta1
+apiVersion: {{ template "cronjob.apiVersion" . }}
 kind: CronJob
 metadata:
   name: etcd-defrag-cron
