run mongo as replicaset

--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -154,6 +154,7 @@ nginx-ingress:
 mongodb:
   enable: true
   useStatefulSet: true
+  architecture: replicaset
   auth:
     rootPassword: ehtyTJj4mR
     user_name: root
