--- a/hkube/templates/gc-service-deployment.yaml
+++ b/hkube/templates/gc-service-deployment.yaml
@@ -68,6 +68,9 @@ spec:
           ports:
             - containerPort: {{ .Values.gc_service.env.rest_port }}
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: mongodb-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
