--- a/hkube/templates/monitor-server-deployment.yaml
+++ b/hkube/templates/monitor-server-deployment.yaml
@@ -47,6 +47,9 @@ spec:
 {{- else }}
           resources: {}
 {{- end }}
+          envFrom:
+            - configMapRef:
+                name: mongodb-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
