--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -55,6 +55,9 @@ spec:
             - name: http
               containerPort: {{ index .Values "algorithm_operator" "env" "metric_port" }}
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: mongodb-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
