--- a/hkube/templates/trigger-service-deployment.yaml
+++ b/hkube/templates/trigger-service-deployment.yaml
@@ -41,6 +41,9 @@ spec:
 {{- end }}
           ports:
             - containerPort: {{ .Values.trigger_service.env.metric_port }}
+          envFrom:
+            - configMapRef:
+                name: mongodb-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
