--- a/hkube/templates/api-server-deployment.yaml
+++ b/hkube/templates/api-server-deployment.yaml
@@ -56,7 +56,7 @@ spec:
             failureThreshold: {{ .Values.api_server.healthcheck.failureThreshold }}
 {{- end }}
 
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.api_server.resources_enable }}          
           resources:
 {{ toYaml .Values.api_server.resources | indent 12 }}
 {{- else }}
