--- a/hkube/templates/etcd-defrag.yaml
+++ b/hkube/templates/etcd-defrag.yaml
@@ -23,7 +23,7 @@ spec:
           containers:
           - name: etcd-defrag-cron
             image: {{ .Values.global.registry }}{{ .Values.etcd_defrag.image.repository }}:{{ .Values.etcd_defrag.image.tag }}
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.etcd_defrag.resources_enable }}          
             resources:
 {{ toYaml .Values.etcd_defrag.resources | indent 14 }}
 {{- else }}
