--- a/hkube/templates/pipeline-cleaner.deployment.yaml
+++ b/hkube/templates/pipeline-cleaner.deployment.yaml
@@ -23,7 +23,7 @@ spec:
           containers:
           - name: pipeline-cleaner
             image: "{{ .Values.global.registry }}{{ index  .Values "pipeline_cleaner" "image" "repository" }}:{{ index .Values "pipeline_cleaner" "image" "tag" }}"
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.pipeline_cleaner.resources_enable }}          
             resources:
 {{ toYaml .Values.pipeline_cleaner.resources | indent 14 }}
 {{- else }}
