--- a/hkube/templates/pipeline-driver-queue-deployment.yaml
+++ b/hkube/templates/pipeline-driver-queue-deployment.yaml
@@ -29,7 +29,7 @@ spec:
         - name: pipeline-driver-queue
           image: "{{ .Values.global.registry }}{{ index .Values "pipeline_driver_queue" "image" "repository" }}:{{ index .Values "pipeline_driver_queue" "image" "tag" }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.pipeline_driver_queue.resources_enable }}          
           resources:
 {{ toYaml .Values.pipeline_driver_queue.resources | indent 12 }}
 {{- else }}
