--- a/hkube/templates/resource-manager-deployment.yaml
+++ b/hkube/templates/resource-manager-deployment.yaml
@@ -42,7 +42,7 @@ spec:
             timeoutSeconds: {{ .Values.resource_manager.healthcheck.timeoutSeconds }}
             failureThreshold: {{ .Values.resource_manager.healthcheck.failureThreshold }}
 {{- end }}      
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.resource_manager.resources_enable }}          
           resources:
 {{ toYaml .Values.resource_manager.resources | indent 12 }}
 {{- else }}
