--- a/hkube/templates/storage-cleaner-deployment.yaml
+++ b/hkube/templates/storage-cleaner-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           containers:
           - name: storage-cleaner
             image: "{{ .Values.global.registry }}{{ index  .Values "storage_cleaner" "image" "repository" }}:{{ index .Values "storage_cleaner" "image" "tag" }}"
-{{- if .Values.global.resources_enable }}          
+{{- if or .Values.global.resources_enable .Values.storage_cleaner.resources_enable }}          
             resources:
 {{ toYaml .Values.storage_cleaner.resources | indent 14 }}
 {{- else }}
